kind finish Ass2
take some time, but finish most problem at last.

--- a/Assignment2/2-navbar.css
+++ b/Assignment2/2-navbar.css
@@ -1,24 +1,14 @@
-
-
-/*
-.simple-linear{background:linear-gradient(blue,black)}
-button:hover:focus:active {background-color: #ffdb3a}
-
+fieldset{background-image: linear-gradient(to right, rgb(0, 75, 75),black)}
 button {
-    background-color: linear-gradient(to right, rgb(0, 68, 255), black);
+    background: transparent;
     border: none;
-    color: rgb(255, 255, 255);
+    color: white;
     padding: 15px 32px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 16px;
+    font-size: 20px;
 }
-*/
-fieldset{background-image: linear-gradient(to right, blue,black)}
-
-button{float: left}
-
-button:hover {background-color: rgba(0, 255, 234, 0)}
+button:hover {background-color: teal}
 button:focus {background-color: blueviolet}
 button:active {background-color: yellow}
