--- a/Assignment2/5-survey.css
+++ b/Assignment2/5-survey.css
@@ -1,6 +1,21 @@
 h1{
     color: #0173a0;
+    text-align: center;
 }
-button{
+button {
     background-color: #0173a0;
-}
+    border: none;
+    color: white;
+    padding: 10px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+  }
+  button:hover{
+      background-color: #555555;
+      color: white;
+  }
+  label{
+      font-weight:bold;
+  }
